--- a/app.html
+++ b/app.html
@@ -1,4 +1,4 @@
-<!doctype html>
+el('forceRefresh').onclick = ()=> { clearCache(); loadCSV(el('csvUrl').value||undefined); };<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -145,7 +145,9 @@
       try{
         let text=null, source='network';
         if(url){
-          const res = await fetch(url, {cache:'no-store'});
+          const controller = new AbortController();
+          const to = setTimeout(()=>controller.abort(), 10000);
+          const res = await fetch(url, {cache:'no-store', signal: controller.signal}).finally(()=>clearTimeout(to));
           if(!res.ok) throw new Error('HTTP '+res.status);
           text = await res.text();
         } else {
@@ -154,17 +156,21 @@
           else {
             // Try defaults; if all fail, fall back to embedded tiny sample
             const tryPaths = [
-              '/data/vsp_choice_master_v7.csv',
-              '/data/vsp_choice_master_v7_full_fixed.csv',
               'data/vsp_choice_master_v7.csv',
               'data/vsp_choice_master_v7_full_fixed.csv',
+              '/Revopt-site/data/vsp_choice_master_v7.csv',
+              '/Revopt-site/data/vsp_choice_master_v7_full_fixed.csv',
+              '/data/vsp_choice_master_v7.csv',
+              '/data/vsp_choice_master_v7_full_fixed.csv',
               'vsp_choice_master_v7.csv',
               'vsp_choice_master_v7_full_fixed.csv'
             ];
             let ok=false;
             for(const p of tryPaths){
               try{
-                const r2 = await fetch(p, {cache:'no-store'});
+                const controller2 = new AbortController();
+                const to2 = setTimeout(()=>controller2.abort(), 8000);
+                const r2 = await fetch(p, {cache:'no-store', signal: controller2.signal}).finally(()=>clearTimeout(to2));
                 if(r2.ok){ text = await r2.text(); source = 'network:'+p; ok=true; break; }
               }catch(_){/* continue */}
             }
