--- a/app.html
+++ b/app.html
@@ -22,19 +22,21 @@
     th,td{border-bottom:1px dashed #213043;padding:8px 6px;text-align:left;font-size:13px}
     th{color:var(--muted);font-weight:600}
     .badge{font-size:11px;border:1px solid var(--line);border-radius:6px;padding:2px 6px}
-    .good{border-color:#35506e}.better{border-color:#7c5c19}.best{border-color:#0f6a52}
-    .money{font-weight:700}.nowrap{white-space:nowrap}
+    .good{border-color:#35506e}
+    .better{border-color:#7c5c19}
+    .best{border-color:#0f6a52}
+    .money{font-weight:700}
+    .nowrap{white-space:nowrap}
   </style>
 </head>
 <body>
   <header>
     <div>
       <h1>RevSight AI — VSP Choice Bundles</h1>
-      <div class="sub">Good/Better/Best ranked by <b>practice profit</b>. AR default <b>ON</b>. Polarized/Transitions are <b>add-ons</b>, not base materials.</div>
+      <div class="sub">Good/Better/Best ranked by <b>practice profit</b>. AR default <b>ON</b>. Polarized/Transitions treated as <b>add‑ons</b>, not base materials.</div>
     </div>
     <div class="sub" id="version">loading…</div>
   </header>
-
   <main>
     <div class="bar">
       <button class="btn" id="forceRefresh">Force Refresh</button>
@@ -65,7 +67,7 @@
           <tr>
             <th>Tier</th>
             <th>Material</th>
-            <th>Add-ons</th>
+            <th>Add‑ons</th>
             <th class="nowrap">Patient Copay</th>
             <th class="nowrap">Chargeback</th>
             <th class="nowrap">Profit</th>
@@ -78,56 +80,52 @@
   </main>
 
   <script>
-    // Config
     const DEFAULT_CSV = 'data/vsp_choice_master_v7.csv';
-
-    // Utils
     const el = (id)=>document.getElementById(id);
-    const sum = (a)=>a.reduce((x,y)=>x+y,0);
+    const sum = (arr)=>arr.reduce((a,b)=>a+b,0);
     const money = (v)=>`$${v.toFixed(2)}`;
-    const num = (v)=>{ const x=parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isFinite(x)?x:0; };
-    const quickHash=(s)=>{ let h=2166136261>>>0; for(let i=0;i<s.length;i++){ h^=s.charCodeAt(i); h=Math.imul(h,16777619)>>>0; } return ('00000000'+h.toString(16)).slice(-8); };
+    function num(v){ const x=parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isFinite(x)?x:0; }
 
-    // CSV (quoted) parser
     function parseCSV(text){
-      const rows=[]; let row=[], field='', q=false;
+      const rows=[]; let field='', row=[], inQ=false;
       for(const ch of text){
-        if(ch==='\"'){ q=!q; field+=ch; continue; }
-        if(!q && ch===','){ row.push(field); field=''; continue; }
-        if(!q && (ch==='\n' || ch==='\r')){ if(field!==''||row.length){ row.push(field); rows.push(row); row=[]; field=''; } continue; }
-        field+=ch;
+        if(ch==='\n'){ if(inQ){field+=ch;} else {row.push(field); rows.push(row); row=[]; field='';} }
+        else if(ch===','){ if(inQ){field+=ch;} else {row.push(field); field='';} }
+        else if(ch==='"'){ inQ=!inQ; }
+        else { field+=ch; }
       }
-      if(field!==''||row.length){ row.push(field); rows.push(row); }
-      const headers = rows.shift().map(h=>h.replace(/^\"|\"$/g,'').trim());
-      return rows.filter(r=>r.length>=headers.length).map(r=>{
-        const o={}; headers.forEach((h,i)=>o[h]=(r[i]||'').replace(/^\"|\"$/g,'').trim()); return o;
+      if(field.length||row.length){ row.push(field); rows.push(row); }
+      const headers = rows.shift().map(h=>h.trim());
+      return rows.filter(r=>r.length===headers.length).map(r=>{
+        const o={}; headers.forEach((h,idx)=>o[h]=r[idx]?.replace(/^\"|\"$/g,'').trim());
+        return o;
       });
     }
 
-    // Cache
+    function quickHash(s){ let h=2166136261>>>0; for(let i=0;i<s.length;i++){ h^=s.charCodeAt(i); h=Math.imul(h,16777619)>>>0; } return ('00000000'+h.toString(16)).slice(-8); }
+
     const CACHE_KEY='rev-vsp-choice-csv-v1';
     const META_KEY='rev-vsp-choice-meta-v1';
-    const setCache=(t,m)=>{ localStorage.setItem(CACHE_KEY,t); localStorage.setItem(META_KEY,JSON.stringify(m)); };
-    const getCache=()=>({ text: localStorage.getItem(CACHE_KEY), meta: JSON.parse(localStorage.getItem(META_KEY)||'{}') });
-    const clearCache=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
+    function setCache(text, meta){ localStorage.setItem(CACHE_KEY,text); localStorage.setItem(META_KEY, JSON.stringify(meta)); }
+    function getCache(){ return { text: localStorage.getItem(CACHE_KEY), meta: JSON.parse(localStorage.getItem(META_KEY)||'{}') }; }
+    function clearCache(){ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); }
 
-    // Data
     let DATA=[];
 
     async function loadCSV(){
       const status=el('status'); status.textContent=' loading…';
       try{
-        const res = await fetch(DEFAULT_CSV,{cache:'no-store'});
+        const res = await fetch(DEFAULT_CSV, {cache:'no-store'});
         if(!res.ok) throw new Error('HTTP '+res.status);
         const text = await res.text();
         const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.gbb', source:'network:'+DEFAULT_CSV, sha:quickHash(text) };
         setCache(text, meta);
-        DATA = parseCSV(text);
+        DATA=parseCSV(text);
         renderMeta();
-        status.textContent = ` [ok] loaded ${DATA.length} rows`;
+        status.textContent=` [ok] loaded ${DATA.length} rows`;
         computeBundles();
       }catch(err){
-        status.textContent = ' Load failed: '+err.message;
+        status.textContent='Load failed: '+err.message;
       }
     }
 
@@ -136,90 +134,93 @@
       el('version').textContent = `plan=${meta.plan||'VSP_choice'} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
     }
 
-    // Business logic
     function applies(row, family){
       const a=(row.applies_to||'').toUpperCase(); if(!a) return true;
-      const t=a.split(/[|,\/\s]+/).filter(Boolean);
-      if(family==='LINED') return t.includes('LINED')||t.includes('OCC')||t.includes('BF')||t.includes('BIFOCAL');
-      return t.includes(family);
+      const tokens=a.split(/[|,\/\s]+/).filter(Boolean);
+      if(family==='LINED') return tokens.includes('LINED')||tokens.includes('OCC')||tokens.includes('BF')||tokens.includes('BIFOCAL');
+      return tokens.includes(family);
     }
-    const byKey=(k)=>DATA.filter(r=>(r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===k);
+    function byKey(key){ return DATA.filter(r => (r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===key); }
 
     function computeBundles(){
       if(!DATA.length){ document.querySelector('#bundleTable tbody').innerHTML=''; return; }
-      const fam = el('lensFamily').value;
-      const wantAR = el('includeAR').checked;
-      const wantAsp = el('includeAspheric').checked;
-      const wantOS  = el('includeOversize').checked;
-      const wantGlass = el('includeGlass').checked;
-      const addTR = el('addTransitions').checked;
-      const addPO = el('addPolarized').checked;
+      const fam=el('lensFamily').value;
+      const wantAR=el('includeAR').checked;
+      const wantAsp=el('includeAspheric').checked;
+      const wantOS=el('includeOversize').checked;
+      const wantGlass=el('includeGlass').checked;
+      const addTR=el('addTransitions').checked;
+      const addPO=el('addPolarized').checked;
 
-      const materials = byKey('material').filter(r=>applies(r,fam)).filter(r=>{
-        const n=(r.enhancement||'').toLowerCase();
-        if(n.includes('polarized') || n.includes('transition')) return false;
-        if(!wantAsp && /aspheric/i.test(n)) return false;
-        if(!wantGlass && /glass/i.test(n)) return false;
+      const materials=byKey('material').filter(r=>applies(r,fam)).filter(r=>{
+        const name=(r.enhancement||'').toLowerCase();
+        if(name.includes('polarized')||name.includes('transition')) return false;
+        if(!wantAsp && /aspheric/i.test(name)) return false;
+        if(!wantGlass && /glass/i.test(name)) return false;
         return true;
       });
 
-      const ars = wantAR ? byKey('ar').filter(r=>applies(r,fam)) : [];
-      const pals = fam==='PAL' ? byKey('progressive').filter(r=>applies(r,fam)) : [];
-      const lined= fam==='LINED'? byKey('lined').filter(r=>applies(r,fam)) : [];
-      const trans = addTR ? byKey('photochromic').filter(r=>applies(r,fam)) : [];
-      const pol = addPO ? byKey('polarized').filter(r=>applies(r,fam)) : [];
-      const oversize = wantOS ? byKey('oversize').filter(r=>applies(r,fam)) : [];
+      const ars=wantAR?byKey('ar').filter(r=>applies(r,fam)):[];
+      const pals=fam==='PAL'?byKey('progressive').filter(r=>applies(r,fam)):[];
+      const lined=fam==='LINED'?byKey('lined').filter(r=>applies(r,fam)):[];
+      const trans=addTR?byKey('photochromic').filter(r=>applies(r,fam)):[];
+      const pol=addPO?byKey('polarized').filter(r=>applies(r,fam)):[];
+      const oversize=wantOS?byKey('oversize').filter(r=>applies(r,fam)):[];
 
-      const pickBest = (arr)=>arr.sort((a,b)=>(num(b.copay)-num(b.chargeback))-(num(a.copay)-num(a.chargeback)))[0];
+      const pickBest=(arr)=>arr.sort((a,b)=>(num(b.copay)-num(b.chargeback))-(num(a.copay)-num(a.chargeback)))[0];
       const bestAR=pickBest(ars), bestPAL=pickBest(pals), bestLIN=pickBest(lined);
       const bestTR=pickBest(trans), bestPO=pickBest(pol), bestOS=pickBest(oversize);
 
-      const bundles = materials.map(m=>{
+      const bundles=materials.map(m=>{
         const items=[m];
         if(bestAR) items.push(bestAR);
-        if(fam==='PAL' && bestPAL) items.push(bestPAL);
-        if(fam==='LINED' && bestLIN) items.push(bestLIN);
+        if(fam==='PAL'&&bestPAL) items.push(bestPAL);
+        if(fam==='LINED'&&bestLIN) items.push(bestLIN);
         if(bestTR) items.push(bestTR);
         if(bestPO) items.push(bestPO);
         if(bestOS) items.push(bestOS);
-        const cop = sum(items.map(x=>num(x.copay)));
-        const cb  = sum(items.map(x=>num(x.chargeback)));
-        const pr  = cop - cb;
-        return { material:m.enhancement, items, copay:cop, chargeback:cb, profit:pr, ratio: cop>0 ? (pr/cop) : (pr>0?Infinity:0) };
+        const cop=sum(items.map(x=>num(x.copay)));
+        const cb=sum(items.map(x=>num(x.chargeback)));
+        const pr=cop-cb;
+        return {material:m.enhancement,items,copay:cop,chargeback:cb,profit:pr,ratio:cop>0?(pr/cop):(pr>0?Infinity:0)};
       });
 
       const byProfit=[...bundles].sort((a,b)=>b.profit-a.profit);
       const byCopay=[...bundles].sort((a,b)=>a.copay-b.copay);
       const best=byProfit[0]||null;
-      const mid=byProfit.find(b=>best && b.material!==best.material) || byProfit[1] || null;
+      let mid=byProfit.find(b=>best&&b.material!==best.material)||byProfit[1]||null;
       const good=byCopay[0]||null;
 
       const tbody=document.querySelector('#bundleTable tbody');
       tbody.innerHTML='';
-      for(const [name,cls,b] of [['Good','good',good],['Better','better',mid],['Best','best',best]]){
+      const rows=[ ['Good','good',good], ['Better','better',mid], ['Best','best',best] ];
+      for(const [name,cls,b] of rows){
         const tr=document.createElement('tr');
-        if(!b){ tr.innerHTML=`<td>${name}</td><td colspan=6 class="sub">no viable bundle</td>`; tbody.appendChild(tr); continue; }
+        if(!b){tr.innerHTML=`<td>${name}</td><td colspan=6 class="sub">no viable bundle</td>`;tbody.appendChild(tr);continue;}
         const addons=b.items.filter(i=>!/material/i.test(i.exclusive_key||''));
         tr.innerHTML=`<td><span class="badge ${cls}">${name}</span></td>
           <td>${b.material}</td>
-          <td>${addons.map(a=>`<span class="badge">${a.enhancement||a.subtype||a.code}</span>`).join(' ')}</td>
+          <td>${addons.map(a=>`<span class=\"badge\">${a.enhancement||a.subtype||a.code}</span>`).join(' ')}</td>
           <td class="money">${money(b.copay)}</td>
           <td class="money">${money(b.chargeback)}</td>
           <td class="money">${money(b.profit)}</td>
           <td>${(b.ratio===Infinity?'∞':b.ratio.toFixed(2))}</td>`;
         tbody.appendChild(tr);
       }
-      el('bundleCount').textContent='Computed: '+[good,mid,best].filter(Boolean).length+' / 3';
+      el('bundleCount').textContent='Computed: '+rows.filter(r=>r[2]).length+' / 3';
     }
 
-    // Wire-up
-    el('forceRefresh').onclick=()=>{ clearCache(); loadCSV(); };
-    el('clearCache').onclick =()=>{ clearCache(); el('status').textContent=' cache cleared'; };
-    ['lensFamily','includeAR','includeAspheric','includeOversize','includeGlass','addTransitions','addPolarized']
-      .forEach(id=> el(id).onchange=computeBundles );
+    el('forceRefresh').onclick=()=>{clearCache();loadCSV();};
+    el('clearCache').onclick=()=>{clearCache();el('status').textContent=' cache cleared';};
+    el('lensFamily').onchange=computeBundles;
+    el('includeAR').onchange=computeBundles;
+    el('includeAspheric').onchange=computeBundles;
+    el('includeOversize').onchange=computeBundles;
+    el('includeGlass').onchange=computeBundles;
+    el('addTransitions').onchange=computeBundles;
+    el('addPolarized').onchange=computeBundles;
 
-    // Boot
-    (async()=>{ await loadCSV(); })();
+    (async function(){await loadCSV();})();
   </script>
 </body>
 </html>
