--- a/app.html
+++ b/app.html
@@ -22,25 +22,24 @@
     th,td{border-bottom:1px dashed #213043;padding:8px 6px;text-align:left;font-size:13px}
     th{color:var(--muted);font-weight:600}
     .badge{font-size:11px;border:1px solid var(--line);border-radius:6px;padding:2px 6px}
-    .good{border-color:#35506e}
-    .better{border-color:#7c5c19}
-    .best{border-color:#0f6a52}
-    .money{font-weight:700}
-    .nowrap{white-space:nowrap}
+    .good{border-color:#35506e}.better{border-color:#7c5c19}.best{border-color:#0f6a52}
+    .money{font-weight:700}.nowrap{white-space:nowrap}
   </style>
 </head>
 <body>
   <header>
     <div>
       <h1>RevSight AI — VSP Choice Bundles</h1>
-      <div class="sub">Good/Better/Best ranked by <b>practice profit</b>. AR default <b>ON</b>. Polarized/Transitions treated as <b>add-ons</b>, not base materials.</div>
+      <div class="sub">Good/Better/Best ranked by <b>practice profit</b>. AR default <b>ON</b>. Polarized/Transitions are <b>add-ons</b>, not base materials.</div>
     </div>
     <div class="sub" id="version">loading…</div>
   </header>
+
   <main>
     <div class="bar">
       <button class="btn" id="forceRefresh">Force Refresh</button>
-      <button class="btn" id="clearCache">Clear Local Cache</button>
+      <button class="btn" id="clearLocal">Clear Local Cache</button>
+
       <label class="switch">Lens family
         <select id="lensFamily" class="input">
           <option value="SV">Single Vision</option>
@@ -48,6 +47,7 @@
           <option value="PAL">Progressive</option>
         </select>
       </label>
+
       <label class="switch"><input type="checkbox" id="includeAR" checked> Include AR</label>
       <label class="switch"><input type="checkbox" id="includeAspheric"> Aspheric</label>
       <label class="switch"><input type="checkbox" id="includeOversize"> Oversize</label>
@@ -80,147 +80,201 @@
   </main>
 
   <script>
+    // ---- Config ----
     const DEFAULT_CSV = 'data/vsp_choice_master_v7.csv';
-    const el = (id)=>document.getElementById(id);
-    const sum = (arr)=>arr.reduce((a,b)=>a+b,0);
-    const money = (v)=>`$${v.toFixed(2)}`;
-    function num(v){ const x=parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isFinite(x)?x:0; }
 
+    // ---- Utils ----
+    const $ = (id)=>document.getElementById(id);
+    const sum = (a)=>a.reduce((x,y)=>x+y,0);
+    const money = (v)=>`$${v.toFixed(2)}`;
+    const num = (v)=>{ const x=parseFloat(String(v??'').toString().replace(/[^0-9.\-]/g,'')); return isFinite(x)?x:0; };
+    const hash=(s)=>{ let h=2166136261>>>0; for(let i=0;i<s.length;i++){ h^=s.charCodeAt(i); h=Math.imul(h,16777619)>>>0; } return ('00000000'+h.toString(16)).slice(-8); };
+
+    // Robust CSV parser (quoted fields)
     function parseCSV(text){
-      const rows=[]; let field='', row=[], inQ=false;
-      for(const ch of text){
-        if(ch==='\n'){ if(inQ){field+=ch;} else {row.push(field); rows.push(row); row=[]; field='';} }
-        else if(ch===','){ if(inQ){field+=ch;} else {row.push(field); field='';} }
-        else if(ch==='"'){ inQ=!inQ; }
-        else { field+=ch; }
+      const out=[], row=[], push=()=>{ out.push(row.splice(0)); };
+      let f='', q=false, r=[];
+      for(let i=0;i<text.length;i++){
+        const c=text[i];
+        if(c==='\"'){ q=!q; f+=c; continue; }
+        if(!q && c===','){ r.push(f); f=''; continue; }
+        if(!q && (c==='\n' || c==='\r')){ if(f!==''||r.length){ r.push(f); out.push(r); r=[]; f=''; } continue; }
+        f+=c;
       }
-      if(field.length||row.length){ row.push(field); rows.push(row); }
-      const headers = rows.shift().map(h=>h.trim());
-      return rows.filter(r=>r.length===headers.length).map(r=>{
-        const o={}; headers.forEach((h,idx)=>o[h]=r[idx]?.replace(/^\"|\"$/g,'').trim());
-        return o;
+      if(f!==''||r.length){ r.push(f); out.push(r); }
+      const headers = out.shift().map(h=>h.replace(/^\"|\"$/g,'').trim());
+      return out.filter(r=>r.length>=headers.length).map(r=>{
+        const o={}; headers.forEach((h,i)=> o[h]=(r[i]||'').replace(/^\"|\"$/g,'').trim() ); return o;
       });
     }
 
-    function quickHash(s){ let h=2166136261>>>0; for(let i=0;i<s.length;i++){ h^=s.charCodeAt(i); h=Math.imul(h,16777619)>>>0; } return ('00000000'+h.toString(16)).slice(-8); }
+    // Local cache
+    const CK='vsp-choice-csv', MK='vsp-choice-meta';
+    const setCache=(t,m)=>{ localStorage.setItem(CK,t); localStorage.setItem(MK,JSON.stringify(m)); };
+    const getCache=()=>({ text: localStorage.getItem(CK), meta: JSON.parse(localStorage.getItem(MK)||'{}') });
+    const clearCache=()=>{ localStorage.removeItem(CK); localStorage.removeItem(MK); $('status').textContent=' cache cleared'; };
 
-    const CACHE_KEY='rev-vsp-choice-csv-v1';
-    const META_KEY='rev-vsp-choice-meta-v1';
-    function setCache(text, meta){ localStorage.setItem(CACHE_KEY,text); localStorage.setItem(META_KEY, JSON.stringify(meta)); }
-    function getCache(){ return { text: localStorage.getItem(CACHE_KEY), meta: JSON.parse(localStorage.getItem(META_KEY)||'{}') }; }
-    function clearCache(){ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); }
+    // ---- Data store ----
+    let ROWS=[];      // normalized rows
 
-    let DATA=[];
-
-    async function loadCSV(){
-      const status=el('status'); status.textContent=' loading…';
-      try{
-        const res = await fetch(DEFAULT_CSV, {cache:'no-store'});
-        if(!res.ok) throw new Error('HTTP '+res.status);
-        const text = await res.text();
-        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.gbb', source:'network:'+DEFAULT_CSV, sha:quickHash(text) };
-        setCache(text, meta);
-        DATA=parseCSV(text);
-        renderMeta();
-        status.textContent=` [ok] loaded ${DATA.length} rows`;
-        computeBundles();
-      }catch(err){
-        status.textContent='Load failed: '+err.message;
-      }
+    // Normalize a raw CSV row so matching is bulletproof
+    function norm(r){
+      const lower = (x)=> String(x||'').toLowerCase().trim();
+      const ek = lower(r.exclusive_key);
+      const grp = lower(r.group);
+      const enh = (r.enhancement||'').trim();
+      const subtype = (r.subtype||'').trim();
+      const code = (r.code||'').trim();
+      const applies = String(r.applies_to||'').toUpperCase().split(/[|,\/\s]+/).filter(Boolean);
+      return {
+        group: grp,
+        subtype, enhancement: enh, code,
+        copay: num(r.copay), chargeback: num(r.chargeback),
+        exclusive_key: ek,
+        applies_to_tokens: applies,
+        active: String(r.active||'yes').toLowerCase().startsWith('y')
+      };
     }
 
-    function renderMeta(){
-      const {meta} = getCache();
-      el('version').textContent = `plan=${meta.plan||'VSP_choice'} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
+    function appliesToFamily(row, fam){
+      if(!row.applies_to_tokens.length) return true;
+      if(fam==='LINED') return row.applies_to_tokens.some(t=> t==='LINED' || t==='OCC' || t==='BF' || t==='BIFOCAL');
+      return row.applies_to_tokens.includes(fam);
     }
 
-    function applies(row, family){
-      const a=(row.applies_to||'').toUpperCase(); if(!a) return true;
-      const tokens=a.split(/[|,\/\s]+/).filter(Boolean);
-      if(family==='LINED') return tokens.includes('LINED')||tokens.includes('OCC')||tokens.includes('BF')||tokens.includes('BIFOCAL');
-      return tokens.includes(family);
+    function byExclusive(key){ // tolerant to whitespace/case
+      key = key.toLowerCase().trim();
+      return ROWS.filter(r=>r.active && r.exclusive_key===key);
     }
-    function byKey(key){ return DATA.filter(r => (r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===key); }
 
-    function computeBundles(){
-      if(!DATA.length){ document.querySelector('#bundleTable tbody').innerHTML=''; return; }
-      const fam=el('lensFamily').value;
-      const wantAR=el('includeAR').checked;
-      const wantAsp=el('includeAspheric').checked;
-      const wantOS=el('includeOversize').checked;
-      const wantGlass=el('includeGlass').checked;
-      const addTR=el('addTransitions').checked;
-      const addPO=el('addPolarized').checked;
+    function byExclusiveAny(keys){ // first match among a set
+      const S = new Set(keys.map(k=>k.toLowerCase().trim()));
+      return ROWS.filter(r=>r.active && S.has(r.exclusive_key));
+    }
 
-      const materials=byKey('material').filter(r=>applies(r,fam)).filter(r=>{
-        const name=(r.enhancement||'').toLowerCase();
-        if(name.includes('polarized')||name.includes('transition')) return false;
-        if(!wantAsp && /aspheric/i.test(name)) return false;
-        if(!wantGlass && /glass/i.test(name)) return false;
+    function loadCounts(fam){
+      const mats = byExclusive('material').filter(r=>appliesToFamily(r,fam));
+      const ars  = byExclusive('ar').filter(r=>appliesToFamily(r,fam));
+      const pals = byExclusive('progressive').filter(r=>appliesToFamily(r,fam));
+      const lins = byExclusive('lined').filter(r=>appliesToFamily(r,fam));
+      const trans= byExclusiveAny(['photochromic','transitions']).filter(r=>appliesToFamily(r,fam));
+      const pol  = byExclusive('polarized').filter(r=>appliesToFamily(r,fam));
+      const over = byExclusive('oversize').filter(r=>appliesToFamily(r,fam));
+      return {mats, ars, pals, lins, trans, pol, over};
+    }
+
+    function pickBestProfit(rows){
+      if(!rows.length) return null;
+      // Highest (copay - chargeback). If tie, prefer lower chargeback then nicer name.
+      return rows.slice().sort((a,b)=>{
+        const pa=(a.copay-a.chargeback), pb=(b.copay-b.chargeback);
+        if(pb!==pa) return pb-pa;
+        if(a.chargeback!==b.chargeback) return a.chargeback-b.chargeback;
+        return (a.enhancement||a.subtype||a.code).localeCompare(b.enhancement||b.subtype||b.code);
+      })[0];
+    }
+
+    function compute(){
+      if(!ROWS.length){ $('bundleTable').querySelector('tbody').innerHTML=''; return; }
+
+      const fam = $('lensFamily').value;
+      const wantAR = $('includeAR').checked;
+      const wantAsp = $('includeAspheric').checked;
+      const wantOS  = $('includeOversize').checked;
+      const wantGlass = $('includeGlass').checked;
+      const addTR = $('addTransitions').checked;
+      const addPO = $('addPolarized').checked;
+
+      const {mats, ars, pals, lins, trans, pol, over} = loadCounts(fam);
+
+      // Base materials (exclude Polarized/Transitions as base, and respect aspheric/glass toggles)
+      const materials = mats.filter(m=>{
+        const n = (m.enhancement||'').toLowerCase();
+        if(n.includes('polarized') || n.includes('transition')) return false;
+        if(!wantAsp && /aspheric/i.test(n)) return false;
+        if(!wantGlass && /glass/i.test(n)) return false;
         return true;
       });
 
-      const ars=wantAR?byKey('ar').filter(r=>applies(r,fam)):[];
-      const pals=fam==='PAL'?byKey('progressive').filter(r=>applies(r,fam)):[];
-      const lined=fam==='LINED'?byKey('lined').filter(r=>applies(r,fam)):[];
-      const trans=addTR?byKey('photochromic').filter(r=>applies(r,fam)):[];
-      const pol=addPO?byKey('polarized').filter(r=>applies(r,fam)):[];
-      const oversize=wantOS?byKey('oversize').filter(r=>applies(r,fam)):[];
+      // Pick the best add-on (by profit) in each category if selected
+      const selAR  = wantAR ? pickBestProfit(ars)   : null;
+      const selPAL = fam==='PAL'   ? pickBestProfit(pals) : null;
+      const selLIN = fam==='LINED' ? pickBestProfit(lins) : null;
+      const selTR  = addTR ? pickBestProfit(trans) : null;
+      const selPO  = addPO ? pickBestProfit(pol)   : null;
+      const selOS  = wantOS? pickBestProfit(over)  : null;
 
-      const pickBest=(arr)=>arr.sort((a,b)=>((num(b.copay)-num(b.chargeback))-(num(a.copay)-num(a.chargeback))))[0];
-      const bestAR=pickBest(ars), bestPAL=pickBest(pals), bestLIN=pickBest(lined);
-      const bestTR=pickBest(trans), bestPO=pickBest(pol), bestOS=pickBest(oversize);
-
-      const bundles=materials.map(m=>{
-        const items=[m];
-        if(bestAR) items.push(bestAR);
-        if(fam==='PAL'&&bestPAL) items.push(bestPAL);
-        if(fam==='LINED'&&bestLIN) items.push(bestLIN);
-        if(bestTR) items.push(bestTR);
-        if(bestPO) items.push(bestPO);
-        if(bestOS) items.push(bestOS);
-        const cop=sum(items.map(x=>num(x.copay)));
-        const cb=sum(items.map(x=>num(x.chargeback)));
-        const pr=cop-cb;
-        return {material:m.enhancement,items,copay:cop,chargeback:cb,profit:pr,ratio:cop>0?(pr/cop):(pr>0?Infinity:0)};
+      const bundles = materials.map(m=>{
+        const items = [m];
+        if(selAR)  items.push(selAR);
+        if(selPAL) items.push(selPAL);
+        if(selLIN) items.push(selLIN);
+        if(selTR)  items.push(selTR);
+        if(selPO)  items.push(selPO);
+        if(selOS)  items.push(selOS);
+        const cop = sum(items.map(x=>x.copay));
+        const cb  = sum(items.map(x=>x.chargeback));
+        const pr  = cop - cb;
+        return {
+          material: m.enhancement || m.subtype || m.code,
+          addOns: items.filter(i=>i!==m),
+          copay: cop, chargeback: cb, profit: pr,
+          ratio: cop>0 ? (pr/cop) : (pr>0?Infinity:0)
+        };
       });
 
-      const byProfit=[...bundles].sort((a,b)=>b.profit-a.profit);
-      const byCopay=[...bundles].sort((a,b)=>a.copay-b.copay);
-      const best=byProfit[0]||null;
-      let mid=byProfit.find(b=>best&&b.material!==best.material)||byProfit[1]||null;
-      const good=byCopay[0]||null;
+      // Good/Better/Best
+      const byProfit = bundles.slice().sort((a,b)=>b.profit-a.profit);
+      const byCopay  = bundles.slice().sort((a,b)=>a.copay-b.copay);
+      const best  = byProfit[0] || null;
+      const mid   = byProfit.find(b => best && b.material!==best.material) || byProfit[1] || null;
+      const good  = byCopay[0] || null;
 
-      const tbody=document.querySelector('#bundleTable tbody');
-      tbody.innerHTML='';
-      const rows=[ ['Good','good',good], ['Better','better',mid], ['Best','best',best] ];
-      for(const [name,cls,b] of rows){
-        const tr=document.createElement('tr');
-        if(!b){tr.innerHTML=`<td>${name}</td><td colspan=6 class="sub">no viable bundle</td>`;tbody.appendChild(tr);continue;}
-        const addons=b.items.filter(i=>!/material/i.test(i.exclusive_key||''));
-        tr.innerHTML=`<td><span class="badge ${cls}">${name}</span></td>
+      // Render
+      const tbody = $('bundleTable').querySelector('tbody'); tbody.innerHTML='';
+      const rows = [['Good','good',good],['Better','better',mid],['Best','best',best]];
+      for(const [name, cls, b] of rows){
+        const tr = document.createElement('tr');
+        if(!b){ tr.innerHTML = `<td>${name}</td><td colspan="6" class="sub">no viable bundle</td>`; tbody.appendChild(tr); continue; }
+        const addBadges = b.addOns.map(a=>`<span class="badge">${a.enhancement||a.subtype||a.code}</span>`).join(' ');
+        tr.innerHTML = `
+          <td><span class="badge ${cls}">${name}</span></td>
           <td>${b.material}</td>
-          <td>${addons.map(a=>`<span class="badge">${a.enhancement||a.subtype||a.code}</span>`).join(' ')}</td>
+          <td>${addBadges||''}</td>
           <td class="money">${money(b.copay)}</td>
           <td class="money">${money(b.chargeback)}</td>
           <td class="money">${money(b.profit)}</td>
           <td>${(b.ratio===Infinity?'∞':b.ratio.toFixed(2))}</td>`;
         tbody.appendChild(tr);
       }
-      el('bundleCount').textContent='Computed: '+rows.filter(r=>r[2]).length+' / 3';
+      $('bundleCount').textContent = 'Computed: '+rows.filter(r=>r[2]).length+' / 3';
     }
 
-    el('forceRefresh').onclick=()=>{clearCache();loadCSV();};
-    el('clearCache').onclick=()=>{clearCache();el('status').textContent=' cache cleared';};
-    el('lensFamily').onchange=computeBundles;
-    el('includeAR').onchange=computeBundles;
-    el('includeAspheric').onchange=computeBundles;
-    el('includeOversize').onchange=computeBundles;
-    el('includeGlass').onchange=computeBundles;
-    el('addTransitions').onchange=computeBundles;
-    el('addPolarized').onchange=computeBundles;
+    async function boot(){
+      $('status').textContent=' loading…';
+      try{
+        const res = await fetch(DEFAULT_CSV,{cache:'no-store'});
+        if(!res.ok) throw new Error('HTTP '+res.status);
+        const txt = await res.text();
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.gbb', source:'network:'+DEFAULT_CSV, sha:hash(txt) };
+        setCache(txt, meta);
+        const raw = parseCSV(txt);
+        ROWS = raw.map(norm);          // << normalization fixes toggle issues
+        $('version').textContent = `plan=${meta.plan} • version=${meta.version} • source=${meta.source} • sha=${meta.sha}`;
+        $('status').textContent = ` [ok] loaded ${ROWS.length} rows`;
+        compute();
+      }catch(e){
+        $('status').textContent=' load failed: '+e.message;
+      }
+    }
 
-    (async function(){await loadCSV();})();
+    // Wire-up
+    $('forceRefresh').onclick = ()=>{ clearCache(); boot(); };
+    $('clearLocal').onclick   = ()=> clearCache();
+    ['lensFamily','includeAR','includeAspheric','includeOversize','includeGlass','addTransitions','addPolarized']
+      .forEach(id=> $(id).onchange = compute);
+
+    boot(); // start
   </script>
 </body>
 </html>
